update image file

--- a/image/Makefile
+++ b/image/Makefile
@@ -1,17 +1,16 @@
 
-$(CC) = gcc
+CC = gcc
 
-$(OBJ) = process.o opencl.o
-
+OBJ = opencl.o process.o
 
 opencl.o: opencl.c image.cl main.h
 	$(CC) -c opencl.c -lOpenCL
 
 process.o: process.c main.h
-	$(CC) -c process.c -LOpenCL
+	$(CC) -c process.c -lOpenCL
 
 running: main.c main.o process.o opencl.o main.h
-	$(CC) $(OBJ) -o running main.c -LOpenCL
+	$(CC) $(OBJ) -o running main.c -lOpenCL
 
 clean:
 	rm opencl.o
