update image example

--- a/info/Makefile
+++ b/info/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 OBJ = 
 
 host_info: ../src/host.h
-	$(CC) $(OBJ) -o host_info host_info.c -lOpenCL
+	$(CC) $(OBJ) -v -o host_info host_info.c -lOpenCL
 
 clean:
 	rm host_info
